--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 :root {
   --clr-primary: hsl(172, 67%, 45%);
 
+  --clr-invalid: #CC8679;
+
   --clr-neutral-900: hsl(183, 100%, 15%);
   --clr-neutral-700: hsl(186, 14%, 43%);
   --clr-neutral-600: hsl(184, 14%, 56%);
@@ -60,6 +62,15 @@ input {
   width: 100%;
 }
 
+input:invalid,
+input:invalid:focus {
+  outline: solid 0.125rem var(--clr-invalid);
+}
+
+input:focus {
+  outline: solid 0.125rem var(--clr-primary);
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -106,6 +117,24 @@ h3 {
 .input-bill,
 .input-people {
   position: relative;
+}
+
+.input.not-zero::before,
+.input.not-letters::before {
+  color: var(--clr-invalid);
+  font-weight: 700;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateY(-120%);
+}
+
+.input.not-zero::before {
+  content: "Can't be zero";
+}
+
+.input.not-letters::before {
+  content: "Can't be letters";
 }
 
 .input-bill::after,
@@ -240,8 +269,18 @@ footer { width: 100%; position: fixed; bottom: 0; z-index: -1;}
   }
 
   .tip-selectors {
+    padding: 0;
     margin: 1rem 2rem 1rem 0;
     width: 100%;
+  }
+
+  .tip-buttons {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  #custom {
+    padding: 0 0.5rem;
   }
 
   .tip-result {
